--- a/configuration.properties
+++ b/configuration.properties
@@ -1,7 +1,7 @@
 browser=chrome
 #browser=remote_chrome
 #browser=chrome-headless
-url=https://qa1.vytrack.com
+url=https://qa.translantik.com
 driver_username=user1
 driver_password=UserUser123
 store_manager_username=storemanager85
